--- a/calculo/index.html
+++ b/calculo/index.html
@@ -141,4 +141,19 @@
             document.body.innerHTML='';
         });
         </script>
-        </body>
+        </body><!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calcular</title>
+</head>
+<body>
+    boody {
+        backgroud: linear-gradient (#6e6e6e, #d2d2d2);
+        font-famil: Array, sans-serif;
+    }
+    header
+    
+</body>
+</html>
